<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:id="@id/f_offline_info_title" android:padding="16.0dip" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="创建新的离线用户" style="@style/Base.TextAppearance.AppCompat.Title" />
    <com.google.android.material.textfield.TextInputLayout android:id="@id/f_offline_info_til" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginStart="8.0dip" android:layout_marginEnd="8.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/f_offline_info_title">
        <com.google.android.material.textfield.TextInputEditText android:id="@id/f_offline_info_tiet" android:layout_width="fill_parent" android:layout_height="wrap_content" android:hint="@string/f_offline_name" android:maxLines="1" android:inputType="textCapWords" />
    </com.google.android.material.textfield.TextInputLayout>
    <View android:id="@id/f_offline_info_divider" android:background="?android:listDivider" android:layout_width="fill_parent" android:layout_height="1.0dip" app:layout_constraintTop_toBottomOf="@id/f_offline_info_til" />
    <TextView android:id="@id/f_offline_info_txt" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/f_offline_gender" android:layout_marginStart="16.0dip" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/f_offline_info_divider" style="@style/Base.TextAppearance.AppCompat.Title" />
    <RadioGroup android:orientation="horizontal" android:id="@id/f_offline_info_radiogroup" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:layout_marginStart="16.0dip" android:layout_marginEnd="16.0dip" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/f_offline_info_txt">
        <RadioButton android:id="@id/f_offline_info_radio_male" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/f_offline_male" android:layout_weight="1.0" />
        <RadioButton android:id="@id/f_offline_info_radio_female" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/f_offline_female" android:layout_weight="1.0" />
    </RadioGroup>
</androidx.constraintlayout.widget.ConstraintLayout>