<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:scrollbars="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <LinearLayout android:orientation="vertical" android:focusableInTouchMode="true" android:clickable="true" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="120.0dip" android:layout_marginTop="@dimen/margintop_about_image" android:layout_marginBottom="@dimen/marginbottom_about_image" android:src="@drawable/pku_logo" />
            <EditText android:textColorHint="@color/text_hint" android:id="@id/userName" android:background="@color/white" android:paddingLeft="@dimen/cell_leftpadding" android:paddingRight="@dimen/cell_rightpadding" android:layout_width="fill_parent" android:layout_height="@dimen/cell_height" android:hint="@string/hint_username" android:inputType="text" style="@android:style/TextAppearance.Medium" />
            <View android:background="@color/black2" android:layout_width="fill_parent" android:layout_height="@dimen/split_line_width" />
            <EditText android:textColorHint="@color/text_hint" android:id="@id/passwd" android:background="@color/white" android:paddingLeft="@dimen/cell_leftpadding" android:paddingRight="@dimen/cell_rightpadding" android:layout_width="fill_parent" android:layout_height="@dimen/cell_height" android:hint="@string/hint_passwd" android:inputType="textPassword" style="@android:style/TextAppearance.Medium" />
            <View android:background="@color/black2" android:layout_width="fill_parent" android:layout_height="@dimen/split_line_width" />
            <LinearLayout android:id="@id/msgcodecontainer" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/cell_height" android:layout_margin="0.0dip">
                <EditText android:textColorHint="@color/text_hint" android:gravity="center|left" android:id="@id/msgcodes" android:background="@color/white" android:paddingLeft="@dimen/cell_leftpadding" android:paddingRight="0.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:hint="@string/hint_msgcode" android:layout_weight="1.0" style="@android:style/TextAppearance.Medium" />
                <TextView android:textColor="@color/black1" android:gravity="center|right" android:id="@id/sendcodes" android:paddingRight="@dimen/cell_rightpadding" android:layout_width="0.0dip" android:layout_height="fill_parent" android:text="@string/sendcode" android:layout_weight="1.0" style="@android:style/TextAppearance.Medium" />
            </LinearLayout>
            <LinearLayout android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="@dimen/cell_height">
                <TextView android:textColor="@color/white" android:gravity="center" android:id="@id/login" android:background="@drawable/btn_disconnect" android:padding="0.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="@dimen/cell_leftpadding" android:layout_marginRight="0.0dip" android:text="@string/login" android:layout_weight="1.0" style="@android:style/TextAppearance.Medium" />
                <TextView android:textColor="@color/colorPKURed" android:gravity="center" android:id="@id/cancel" android:background="@drawable/btn_selectdisconnect" android:padding="0.0dip" android:layout_width="0.0dip" android:layout_height="fill_parent" android:layout_marginLeft="0.0dip" android:layout_marginRight="@dimen/cell_leftpadding" android:text="@string/cancel" android:layout_weight="1.0" style="@android:style/TextAppearance.Medium" />
            </LinearLayout>
            <ImageView android:layout_gravity="center" android:layout_width="wrap_content" android:layout_height="180.0dip" android:layout_marginTop="@dimen/margintop_login_bottomimage" android:layout_marginBottom="@dimen/marginbottom_about_image" android:src="@drawable/pku_view_3" />
            <TextView android:gravity="center" android:id="@id/appversion_hint" android:background="@color/white" android:paddingLeft="@dimen/cell_leftpadding" android:paddingRight="@dimen/cell_rightpadding" android:layout_width="fill_parent" android:layout_height="25.0dip" android:text="服务热线: 010-62751023" style="@android:style/TextAppearance.Small" />
            <TextView android:gravity="center" android:background="@color/white" android:paddingLeft="@dimen/cell_leftpadding" android:paddingRight="@dimen/cell_rightpadding" android:layout_width="fill_parent" android:layout_height="25.0dip" android:text="Email: its@pku.edu.cn" style="@android:style/TextAppearance.Small" />
            <TextView android:textColor="@color/colorPKUBlue" android:gravity="center" android:id="@id/cc_link" android:background="@color/white" android:paddingLeft="@dimen/cell_leftpadding" android:paddingRight="@dimen/cell_rightpadding" android:layout_width="fill_parent" android:layout_height="25.0dip" android:layout_marginBottom="10.0dip" android:text="©北京大学计算中心" style="@android:style/TextAppearance.Small" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>