<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <ImageView android:id="@id/a_login_bg" android:layout_width="0.0dip" android:layout_height="0.0dip" android:src="@drawable/clip_login_bg" android:scaleType="centerCrop" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintHorizontal_bias="1.0" app:layout_constraintLeft_toLeftOf="parent" app:layout_constraintRight_toRightOf="parent" app:layout_constraintTop_toTopOf="parent" app:layout_constraintVertical_bias="1.0" />
    <ImageView android:id="@id/a_login_img_logo" android:layout_width="128.0dip" android:layout_height="128.0dip" android:layout_marginTop="48.0dip" android:scaleType="centerCrop" android:layout_marginStart="76.0dip" android:layout_marginEnd="75.0dip" app:layout_constraintHorizontal_bias="0.503" app:layout_constraintLeft_toLeftOf="@id/a_login_guideLine_left" app:layout_constraintRight_toLeftOf="@id/a_login_guideLine_right" app:layout_constraintTop_toTopOf="parent" app:srcCompat="@drawable/clip_login_logo" />
    <TextView android:textStyle="bold" android:textColor="@color/grey_900" android:gravity="center" android:id="@id/a_login_img_banner" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="8.0dip" android:text="@string/a_login_embed_title" android:alpha="0.87" android:fontFamily="serif" app:layout_constraintLeft_toLeftOf="@id/a_login_guideLine_left" app:layout_constraintRight_toLeftOf="@id/a_login_guideLine_right" app:layout_constraintTop_toBottomOf="@id/a_login_img_logo" style="@style/Base.TextAppearance.AppCompat.Headline" />
    <Button android:textSize="18.0sp" android:textColor="#ffffffff" android:id="@id/a_login_btn_iaaa_login" android:background="@color/red_500" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="32.0dip" android:text="@string/a_login_button_text" app:layout_constraintHorizontal_bias="1.0" app:layout_constraintLeft_toLeftOf="@id/a_login_guideLine_left" app:layout_constraintRight_toLeftOf="@id/a_login_guideLine_right" app:layout_constraintTop_toBottomOf="@id/a_login_img_banner" />
    <Button android:textSize="18.0sp" android:textColor="#ffffffff" android:id="@id/a_login_btn_offline_login" android:background="@color/red_500" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/a_login_offline_button_text" app:layout_constraintEnd_toStartOf="@id/a_login_btn_old_user" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="@id/a_login_guideLine_left" app:layout_constraintTop_toBottomOf="@id/a_login_btn_iaaa_login" />
    <Button android:textSize="18.0sp" android:textColor="@color/white" android:id="@id/a_login_btn_old_user" android:background="@color/red_500" android:visibility="gone" android:layout_width="0.0dip" android:layout_height="wrap_content" android:layout_marginTop="24.0dip" android:text="@string/a_login_old_user" android:layout_marginStart="8.0dip" app:layout_constraintEnd_toStartOf="@id/a_login_guideLine_right" app:layout_constraintStart_toEndOf="@id/a_login_btn_offline_login" app:layout_constraintTop_toBottomOf="@id/a_login_btn_iaaa_login" />
    <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/a_login_guideLine_left" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.2" />
    <androidx.constraintlayout.widget.Guideline android:orientation="vertical" android:id="@id/a_login_guideLine_right" android:layout_width="wrap_content" android:layout_height="wrap_content" app:layout_constraintGuide_percent="0.8" />
</androidx.constraintlayout.widget.ConstraintLayout>