<?xml version="1.0" encoding="utf-8"?>
<com.google.android.material.card.MaterialCardView android:layout_width="match_parent" android:layout_height="wrap_content" android:layout_margin="16dp" app:cardBackgroundColor="@color/or_surface_container_low" app:cardCornerRadius="24dp" app:cardElevation="0dp" app:strokeWidth="0dp"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <androidx.constraintlayout.widget.ConstraintLayout android:orientation="vertical" android:layout_width="match_parent" android:layout_height="wrap_content" android:paddingTop="8dp" android:paddingBottom="4dp">
        <TextView android:id="@id/f_map_txt_duration_number" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="16dp" android:text="00:00" android:gravity="center_horizontal" android:textAppearance="@style/TextAppearance.OpenRunner.HeroValue" app:layout_constraintEnd_toStartOf="@id/f_map_txt_speed_number" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toEndOf="@id/f_map_txt_distance_number" app:layout_constraintTop_toTopOf="parent" />
        <TextView android:id="@id/f_map_txt_speed_number" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0.0" android:gravity="center_horizontal" android:layout_marginStart="24dp" android:layout_marginEnd="16dp" android:textAppearance="@style/TextAppearance.OpenRunner.HeroValue" app:layout_constraintBottom_toBottomOf="@id/f_map_txt_duration_number" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toEndOf="@id/f_map_txt_duration_number" app:layout_constraintTop_toTopOf="@id/f_map_txt_duration_number" />
        <TextView android:id="@id/f_map_txt_distance_number" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="0.0" android:gravity="center_horizontal" android:layout_marginStart="16dp" android:layout_marginEnd="24dp" android:textAppearance="@style/TextAppearance.OpenRunner.HeroValue" app:layout_constraintBottom_toBottomOf="@id/f_map_txt_duration_number" app:layout_constraintEnd_toStartOf="@id/f_map_txt_duration_number" app:layout_constraintHorizontal_bias="0.5" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toTopOf="@id/f_map_txt_duration_number" />
        <TextView android:id="@id/f_map_txt_distance_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/f_map_hint_distance_normal" android:gravity="center_horizontal" android:textAppearance="@style/TextAppearance.OpenRunner.ItemMeta" app:layout_constraintLeft_toLeftOf="@id/f_map_txt_distance_number" app:layout_constraintRight_toRightOf="@id/f_map_txt_distance_number" app:layout_constraintTop_toBottomOf="@id/f_map_txt_distance_number" />
        <TextView android:id="@id/f_map_txt_speed_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/f_map_hint_speed_main" android:gravity="center_horizontal" android:textAppearance="@style/TextAppearance.OpenRunner.ItemMeta" app:layout_constraintLeft_toLeftOf="@id/f_map_txt_speed_number" app:layout_constraintRight_toRightOf="@id/f_map_txt_speed_number" app:layout_constraintTop_toBottomOf="@id/f_map_txt_speed_number" />
        <TextView android:id="@id/f_map_txt_duration_text" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/f_map_hint_time_normal" android:gravity="center_horizontal" android:textAppearance="@style/TextAppearance.OpenRunner.ItemMeta" app:layout_constraintLeft_toLeftOf="@id/f_map_txt_duration_number" app:layout_constraintRight_toRightOf="@id/f_map_txt_duration_number" app:layout_constraintTop_toBottomOf="@id/f_map_txt_duration_number" />
        <androidx.constraintlayout.widget.Barrier android:id="@id/f_map_barrier_top" android:layout_width="match_parent" android:layout_height="wrap_content" app:barrierDirection="bottom" app:constraint_referenced_ids="f_map_txt_distance_text,f_map_txt_speed_text,f_map_txt_duration_text" />

        <LinearLayout android:orientation="horizontal" android:layout_width="0dp" android:layout_height="wrap_content" android:layout_marginStart="20dp" android:layout_marginTop="16dp" android:layout_marginEnd="20dp" android:layout_marginBottom="16dp" app:layout_constraintBottom_toBottomOf="parent" app:layout_constraintEnd_toEndOf="parent" app:layout_constraintStart_toStartOf="parent" app:layout_constraintTop_toBottomOf="@id/f_map_barrier_top">

            <com.google.android.material.button.MaterialButton android:id="@id/f_map_btn_run" style="@style/Widget.Material3.Button" android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content" android:text="@string/f_map_run" />

            <com.google.android.material.button.MaterialButton android:id="@id/f_map_btn_pause" style="@style/Widget.Material3.Button.TonalButton" android:layout_width="0dp" android:layout_weight="1" android:layout_height="wrap_content" android:layout_marginStart="12dp" android:text="@string/f_map_pause" />
        </LinearLayout>

        <androidx.constraintlayout.widget.Group android:id="@id/f_map_group_running" android:visibility="visible" android:layout_width="wrap_content" android:layout_height="wrap_content" app:constraint_referenced_ids="f_map_txt_distance_number, f_map_txt_duration_number, f_map_txt_speed_number, f_map_txt_duration_text, f_map_txt_distance_text, f_map_txt_speed_text" />
    </androidx.constraintlayout.widget.ConstraintLayout>
</com.google.android.material.card.MaterialCardView>
